Change module name from Resource to Archive

--- a/m.skins/default/list.html
+++ b/m.skins/default/list.html
@@ -2,7 +2,7 @@
 	<div class="hx h2">
 		<h2>
 			<a href="{getUrl('','vid',$vid,'mid',$mid)}">{$module_info->browser_title}</a>
-			<a href="{getUrl('page','','act','dispResourceCategory','')}" class="ca">{$lang->category}</a>
+			<a href="{getUrl('page','','act','dispArchiveCategory','')}" class="ca">{$lang->category}</a>
 		</h2>
 	</div>
 	<div class="ln">
