--- a/m.skins/simpleGray/list.html
+++ b/m.skins/simpleGray/list.html
@@ -2,7 +2,7 @@
 	<div class="hx">
 		<h2>
 		<a href="{getUrl('','vid',$vid,'mid',$mid)}">{$module_info->title}<!--@if($module_info->sub_title)--> - {$module_info->sub_title}<!--@end--></a>
-		<a href="{getUrl('page','','act','dispResourceCategory','')}" class="bn">{$lang->category}</a>
+		<a href="{getUrl('page','','act','dispArchiveCategory','')}" class="bn">{$lang->category}</a>
 		</h2>
 	</div>
 	<!--@if($module_info->comment)-->
