--- a/m.skins/simpleGray/view.html
+++ b/m.skins/simpleGray/view.html
@@ -20,7 +20,7 @@
 			<dt>{$lang->homepage}</dt>
 			<dd><a href="{$package->get('homepage')}" onclick="window.open(this.href); return false;">{$package->get('homepage')}</a></dd>
 			<!--@end-->
-			<!--@if($package->get('path') && $module_info->resource_use_path=='Y')-->
+			<!--@if($package->get('path') && $module_info->archive_use_path=='Y')-->
 			<dt>{$lang->package_path}</dt>
 			<dd>{$package->get('path')}</dd>
 			<!--@end-->
@@ -34,7 +34,7 @@
 			<td>{$package->get('item_version')}</td>
 			<th>{$lang->downloaded_count}</th>
 			<td>{$package->get('item_downloaded')}</td>
-			<dt>{$lang->resource_estimate}</dt>
+			<dt>{$lang->archive_estimate}</dt>
 			<dd>
 				<!--@for($i=0;$i<5;$i++)--><!--@if($i<$package->get('item_star'))-->★<!--@else-->☆<!--@end--><!--@end-->
 				<!--@if($package->get('item_voter'))-->
@@ -48,7 +48,7 @@
 		<p class="ac"><a href="{$package->get('download_url')}" class="bn">{$lang->download}</a>
 	</div>
 	<div class="hx">
-		<h3>{$lang->resource_estimate} <em>[{number_format($package->getCommentCount())}]</em> <button type="button" class="tg" title="open/close"></button></h3>
+		<h3>{$lang->archive_estimate} <em>[{number_format($package->getCommentCount())}]</em> <button type="button" class="tg" title="open/close"></button></h3>
 	</div>
 	<!--@if($package->getCommentCount())-->
 	<ul class="rp tgo open">
@@ -89,7 +89,7 @@
 				<label for="p10">5</label>
 			</li>
 			<li>
-				<label for="rText" class="db fb">{$lang->resource_estimate}</label>
+				<label for="rText" class="db fb">{$lang->archive_estimate}</label>
 				<textarea name="content" cols="20" rows="5" id="rText" class="itxx"></textarea>
 			</li>
 		</ul>
