--- a/skins/xe_official/packagelist.html
+++ b/skins/xe_official/packagelist.html
@@ -7,7 +7,7 @@
 
 	{@
 		$avail_id = array(
-			'modules/resource/skins/xe_official/deletepackage/1' => 1,
+			'modules/archive/skins/xe_official/deletepackage/1' => 1,
 		);
 	}
 	<div cond="$XE_VALIDATOR_MESSAGE && isset($avail_id[$XE_VALIDATOR_ID])" class="message {$XE_VALIDATOR_MESSAGE_TYPE}">
@@ -46,7 +46,7 @@
 		<col width="80" />
 		<col width="100" />
 		<col width="*" />
-		<!--@if($module_info->resource_use_path=='Y')--><col width="*" /><!--@end-->
+		<!--@if($module_info->archive_use_path=='Y')--><col width="*" /><!--@end-->
 		<col width="70" />
 		<col width="70" />
 		<col width="60" />
@@ -56,7 +56,7 @@
 			<th scope="col">{$lang->status}</th>
 			<th scope="col">{$lang->package_category}</th>
 			<th scope="col">{$lang->package_title}</th>
-			<!--@if($module_info->resource_use_path=='Y')--><th scope="col">{$lang->package_path}</th><!--@end-->
+			<!--@if($module_info->archive_use_path=='Y')--><th scope="col">{$lang->package_path}</th><!--@end-->
 			<th scope="col">{$lang->version}</th>
 			<th scope="col">{$lang->download}</th>
 			<th scope="col">{$lang->regdate}</th>
@@ -76,8 +76,8 @@
 				<!--@end-->
 			</td>
 			<td class="center">{$categories[$val->category_srl]->title}</td>
-			<td class="title"><a href="{getUrl('package_srl', $val->package_srl,'act','dispResourcePackage')}">{$val->title}</a></td>
-			<!--@if($module_info->resource_use_path=='Y')--><td>{$val->path}</td><!--@end-->
+			<td class="title"><a href="{getUrl('package_srl', $val->package_srl,'act','dispArchivePackage')}">{$val->title}</a></td>
+			<!--@if($module_info->archive_use_path=='Y')--><td>{$val->path}</td><!--@end-->
 			<td class="center date"><!--@if($val->version)-->{$val->version}<!--@else-->&nbsp;<!--@end--></td>
 			<td class="center date">{number_format($val->downloaded)}</td>
 			<td class="center date">{zdate($val->regdate, "Y.m.d")}</td>
@@ -87,7 +87,7 @@
 	<!--@else-->
 	<tbody>
 		<tr>
-			<td colspan="<!--@if($module_info->resource_use_path=='Y')-->7<!--@else-->6<!--@end-->" class="center">{$lang->no_packages}</td>
+			<td colspan="<!--@if($module_info->archive_use_path=='Y')-->7<!--@else-->6<!--@end-->" class="center">{$lang->no_packages}</td>
 		</tr>
 	</tbody>
 	<!--@end-->
@@ -95,7 +95,7 @@
 
 	<div class="btnArea">
 		<a href="{getSiteUrl($site_module_info->domain, '', 'mid',$module_info->mid)}" class="btn" style="float:left">{$lang->cmd_back}</a>
-		<a href="{getSiteUrl($site_module_info->domain, '', 'mid',$module_info->mid,'act','dispResourceInsertPackage', 'from', 'packageList')}" class="btn btn-inverse">{$lang->cmd_insert_package}</a>
+		<a href="{getSiteUrl($site_module_info->domain, '', 'mid',$module_info->mid,'act','dispArchiveInsertPackage', 'from', 'packageList')}" class="btn btn-inverse">{$lang->cmd_insert_package}</a>
 	</div>
 
 	<div class="pagination">
