--- a/tpl/search_dependency.html
+++ b/tpl/search_dependency.html
@@ -1,4 +1,4 @@
-<load target="js/resource.js" />
+<load target="js/archive.js" />
 <div class="x_modal-header">
 	<h1>{$lang->search_dependency}</h1>
 </div>
