--- a/m.skins/simpleGray/index.html
+++ b/m.skins/simpleGray/index.html
@@ -3,7 +3,7 @@
 {@ Context::addJsFile("./common/js/common.js", true, '', -100000) }
 {@ Context::addJsFile("./common/js/xml_handler.js", true, '', -100000) }
 {@ Context::addJsFile("./common/js/xml_js_filter.js", true, '', -100000) }
-<!--%import("./css/mresource.css")-->
+<!--%import("./css/marchive.css")-->
 <!--@if($package)-->
 <include target="view.html" />
 <!--@else-->
