--- a/skins/xe_official/attach.html
+++ b/skins/xe_official/attach.html
@@ -39,14 +39,14 @@
 	</tr>
 	</table>
 
-	<div cond="$XE_VALIDATOR_MESSAGE && $XE_VALIDATOR_ID == 'modules/resource/skins/xe_official/attach/1'" class="message {$XE_VALIDATOR_MESSAGE_TYPE}">
+	<div cond="$XE_VALIDATOR_MESSAGE && $XE_VALIDATOR_ID == 'modules/archive/skins/xe_official/attach/1'" class="message {$XE_VALIDATOR_MESSAGE_TYPE}">
 		<p>{$XE_VALIDATOR_MESSAGE}</p>
 	</div>
 
 	<form action="./" method="post" enctype="multipart/form-data" ruleset="attachOneTime">
 	<input type="hidden" name="vid" value="{$vid}" />
 	<input type="hidden" name="mid" value="{$mid}" />
-	<input type="hidden" name="act" value="procResourceAttachOneTime" />
+	<input type="hidden" name="act" value="procArchiveAttachOneTime" />
 	<input type="hidden" name="package_srl" value="{$selected_package->package_srl}" />
 	<input type="hidden" name="item_srl" value="{$item_srl}" />
 	<input type="hidden" name="document_srl" value="{$document_srl}" />
@@ -55,7 +55,7 @@
 			copy a value of 'attach_description' to 'description' when submit by 'BeforeValidateStub' -->
 	<input type="hidden" name="attach_description" value="" />
 	<input type="hidden" name="description" value="" />
-	<input type="hidden" name="xe_validator_id" value="modules/resource/skins/xe_official/attach/1" />
+	<input type="hidden" name="xe_validator_id" value="modules/archive/skins/xe_official/attach/1" />
 	<fieldset>
 			<table class="form">
 			<tr class="first_child">
@@ -106,7 +106,7 @@
 					<div class="editor">
 						{$editor}
 						<!--// if the page is back by error, delete autosave data  -->
-						<script cond="$XE_VALIDATOR_MESSAGE && $XE_VALIDATOR_ID == 'modules/resource/skins/xe_official/attach/1'">
+						<script cond="$XE_VALIDATOR_MESSAGE && $XE_VALIDATOR_ID == 'modules/archive/skins/xe_official/attach/1'">
 							jQuery('input[name="_saved_doc_title"], input[name="_saved_doc_content"]').val('');
 						</script>
 					</div>
@@ -117,7 +117,7 @@
 		</fieldset>
 
 		<div class="btnArea">
-			<a href="{getUrl('act','dispResourcePackage')}" class="btn" style="float:left">{$lang->cmd_back}</a>
+			<a href="{getUrl('act','dispArchivePackage')}" class="btn" style="float:left">{$lang->cmd_back}</a>
 			<input class="btn btn-inverse" type="submit" value="{$lang->cmd_attach_file}" />
 		</div>
 	</form>
