--- a/skins/xe_official/include.itemlist.html
+++ b/skins/xe_official/include.itemlist.html
@@ -5,7 +5,7 @@
 	<p class="description">{nl2br(htmlspecialchars($package->get('package_description')))}</p>
 
 	{@$rowspan=3}
-	<!--@if($package->get('path') && $module_info->resource_use_path=='Y')-->{@$rowspan++}<!--@end-->
+	<!--@if($package->get('path') && $module_info->archive_use_path=='Y')-->{@$rowspan++}<!--@end-->
 	<!--@if($package->get('homepage'))-->{@$rowspan++}<!--@end-->
 
 	<table class="packageView">
@@ -39,7 +39,7 @@
 		<td colspan="3"><a href="{$package->get('homepage')}" onclick="window.open(this.href); return false;">{$package->get('homepage')}</a></td>
 	</tr>
 	<!--@end-->
-	<!--@if($package->get('path')&&$module_info->resource_use_path=='Y')-->
+	<!--@if($package->get('path')&&$module_info->archive_use_path=='Y')-->
 	<tr>
 		<th>{$lang->package_path}</th>
 		<td colspan="3">{$package->get('path')}</td>
